--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,21 @@
-#root {
-  max-width: 1280px;
+/* #root {
+  /* max-width: 1280px; 
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; 
+  border: 2px solid blue;
  
-}
+} */
 
 .container-fluid {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.container {
   display: grid;
-  grid-template-columns: 455px 2fr 
+  grid-template-columns: 2fr 4fr 1fr;
+  gap: 15;
 }
 
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
