--- a/src/index.css
+++ b/src/index.css
@@ -11,22 +11,15 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0 auto;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
-body {
+body{
   margin: 0;
   display: grid;
-    grid-template-columns: 455px 2fr 
-
+  grid-template-columns: 1fr;
+  border: 2px solid rgb(255, 140, 0);
 }
 
 h1 {
@@ -35,7 +28,7 @@ h1 {
 }
 
 
-
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -47,4 +40,4 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
