--- a/src/App.css
+++ b/src/App.css
@@ -18,4 +18,20 @@
   gap: 15;
 }
 
+.principal-description {
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tools {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 2px solid rgb(132, 0, 255); */
+
+}
+
+
 
